--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,9 @@ Skins/Monthly Calendar/
 Skins/Enigma/
 Skins/GoogleCalendar/
 Skins/WP7/
+Skins/RL Arca Majora Style/
+Skins/RetrOcOlOr/
+Skins/Everon/
+Skins/SONIQ/
+Skins/Weather.com/
+Skins/Windows10WeatherEnterpriseJSONnewTWC/
