--- a/Skins/Sonder/Settings/ColorPicker/Eyedropper/Eyedropper.ini
+++ b/Skins/Sonder/Settings/ColorPicker/Eyedropper/Eyedropper.ini
@@ -11,7 +11,7 @@ mouseX=0
 mouseY=0
 previewOffsetX=((#previewWidth# / #zoomFactor# / 2) + 5)
 previewOffsetY=((#previewHeight# / #zoomFactor# / 2) + 5)
-parentPath=C:\Users\mpurs\OneDrive\Documents\Rainmeter\Skins\Sonder\ColorPicker\
+parentPath=C:\Users\mpurs\OneDrive\Documents\Rainmeter\Skins\Sonder\Settings\ColorPicker\
 
 ; ==================================================
 ; MEASURES
