--- a/Skins/Sonder/Settings/ColorPicker/Minimized/Minimized.ini
+++ b/Skins/Sonder/Settings/ColorPicker/Minimized/Minimized.ini
@@ -17,7 +17,7 @@ colorHover_MeterCloseWindowButton=255,88,75
 ; DYNAMIC
 parentConfig=Sonder\ColorPicker
 parentPath=C:\Users\mpurs\Documents\Rainmeter\Skins\Sonder\ColorPicker\
-;parentPath=#ROOTCONFIG#\ColorPicker\
+;parentPath=#ROOTCONFIG#\Settings\ColorPicker\
 
 @includeIcons=#parentPath#Extra\Icons.inc
 
