--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -8,37 +8,36 @@ Name=CPU Config
 Author=mpurses (raiguard mod)
 Information=Configuration for Advanced System
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
-Version=2.3
+Version=2.4
 
 [Variables]
 @includeStyleSheet=#@#Styles-System\Advanced-StyleSheet.inc
 @includeCpuSettings=#@#Styles-System\Advanced-Settings\CpuSettings.inc
-;@includeDisksSettings=#@#Styles-System\Advanced-Settings\DisksSettings.inc
+@includeDisksSettings=#@#Styles-System\Advanced-Settings\DisksSettings.inc
 @includeDynamicVars=#dynamicVarsPath#
 @includeGadgetSettings=#@#Styles-System\Advanced-Settings\GpuSettings.inc
 gpuIndex=0
-
 scale=1
 ; W=770
 ; H=505
 bgWidth=770
 contentMarginAbs=4
 useMoboFanSensor=0
-
 currentGadget=#SystemMeterConfig#
 ;currentGadget=#gpuMeterConfig#
-
-extProgram=0
+;currentGadget=#disksMeterConfig#
+extProgram=1
 coreTempSource=Hwinfo
-
+;GPU
 gpuMeter1Config=Sonder\System\GPU1
 gpuMeter2Config=Sonder\System\GPU2
 gpuMeter3Config=Sonder\System\GPU3
-
 gpuMeter1SettingsPath=#@#Styles-System\Advanced-Settings\GpuSettings1.inc
 gpuMeter2SettingsPath=#@#Styles-System\Advanced-Settings\GpuSettings2.inc
 gpuMeter3SettingsPath=#@#Styles-System\Advanced-Settings\GpuSettings3.inc
-
+;Disk
+tempUserIsAdmin=
+userIsAdmin=1
 ; ------------------------------
 ; DEFAULTS
 
@@ -72,6 +71,32 @@ dColorCore17=#SystemcolorBar#
 dColorCore18=#SystemcolorBar#
 dColorTt=#SystemcolorBar#
 dTtHistogramAlpha=50
+dColorDisk1=#SystemcolorBar#
+dColorDisk2=#SystemcolorBar#
+dColorDisk3=#SystemcolorBar#
+dColorDisk4=#SystemcolorBar#
+dColorDisk5=#SystemcolorBar#
+dColorDisk6=#SystemcolorBar#
+dColorDisk7=#SystemcolorBar#
+dColorDisk8=#SystemcolorBar#
+dColorDisk9=#SystemcolorBar#
+dColorDisk10=#SystemcolorBar#
+dColorDisk11=#SystemcolorBar#
+dColorDisk12=#SystemcolorBar#
+dColorDisk13=#SystemcolorBar#
+dColorDisk14=#SystemcolorBar#
+dColorDisk15=#SystemcolorBar#
+dColorDisk16=#SystemcolorBar#
+dColorDisk17=#SystemcolorBar#
+dColorDisk18=#SystemcolorBar#
+dColorDisk19=#SystemcolorBar#
+dColorDisk20=#SystemcolorBar#
+dColorDisk21=#SystemcolorBar#
+dColorDisk22=#SystemcolorBar#
+dColorDisk23=#SystemcolorBar#
+dColorDisk24=#SystemcolorBar#
+dColorDisk25=#SystemcolorBar#
+dColorDisk26=#SystemcolorBar#
 
 ; ==================================================
 ; MEASURES
@@ -149,6 +174,26 @@ SetMaxGpuTempAction=[!SetOption MeasureGpuTemperature MaxValue "#maxGpuTemp#" "#
 DualGpuModeAction=[!Refresh "#SystemMeterConfig#"]
 GpuTitleAction=[!SetOption MeterGadgetGPUTitle Hidden "(#showGpuTitle# = 0)" "#SystemMeterConfig#"][!SetOption MeterGadgetGPUTitle Y "((#showGpuTitle# = 0) ? 0 : #rowSpacing#)R" "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!UpdateMeter MeterGadgetGPUTitle "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 
+[MeasureSettingsScriptDisk]
+Measure=Script
+ScriptFile=#scriptPath#Settings.lua
+; TABLES
+Assets=#settingsAssets#
+; REFERENCES
+SettingsPath=#disksSettingsPath#
+ConfigPath=#SystemMeterConfig#
+MeasureInputText=MeasureSettingsInputText
+; DISK ACTIONSETS
+DefaultAction=[!Update "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+HideDisksAction=[!UpdateMeasureGroup DiskDetectionMeasures "#SystemMeterConfig#"]
+ShowReadWriteAction=[!UpdateMeterGroup DiskReadWrite "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+DiskTempsAction=[!SetOptionGroup DiskTemps Disabled "(#showDiskTemps# = 0)" "#SystemMeterConfig#"][!UpdateMeasureGroup DiskTemps "#SystemMeterConfig#"][!UpdateMeterGroup DiskTemps "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+RWLettersAction=[!EnableMeasure MeasureDiskReadWriteLettersChange "#SystemMeterConfig#"][!UpdateMeasure MeasureDiskReadWriteLettersChange "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+DiskRWAction=[!UpdateMeterGroup DiskReadWrite "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+IgnoreRemovableAction=[!UpdateMeasureGroup DiskDetectionMeasures "#SystemMeterConfig#"]
+HideElementsAction=[!CommandMeasure MeasureDiskConfigScript "UpdateDiskElements('#hideElements#')" "#SystemMeterConfig#"]
+DISKTitleAction=[!SetOption GadgetDiskNameString Hidden "(#showDISKTitle# = 0)" "#SystemMeterConfig#"][!SetOption GadgetDiskNameString Y "((#showDISKTitle# = 0) ? 0 : #rowSpacingDisk#)R" "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!UpdateMeter GadgetDiskNameString "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+
 [MeasureSettingsInputText]
 Measure=Plugin
 Plugin=InputText
@@ -173,6 +218,12 @@ StartInFolder=#@#Addons\HWiNFO
 Measure=Plugin
 Plugin=RunCommand
 Parameter=HWiNFOSharedMemoryViewer.exe /rmskin="#gpuSettingsPath#"
+StartInFolder=#@#Addons\HWiNFO
+
+[MeasureOpenHwinfoSmvDISK]
+Measure=Plugin
+Plugin=RunCommand
+Parameter=HWiNFOSharedMemoryViewer.exe /rmskin="#disksSettingsPath#"
 StartInFolder=#@#Addons\HWiNFO
 
 [MeasureCpuName]
@@ -265,8 +316,55 @@ IfFalseAction3=[!EnableMouseActionGroup * CpuTempGraph][!SetOptionGroup CpuTempG
 IfCondition4=(#showLineGraph# = 0) || (#extProgram# = 0) || (#extProgram# = 2)
 IfTrueAction4=[!DisableMouseActionGroup * CpuFanGraph][!SetOptionGroup CpuFanGraph FontColor "#colorDisabled#"][!SetOptionGroup CpuFanGraph Fill "Fill Color #colorDisabled#"][!UpdateMeterGroup CpuFanGraph]
 IfFalseAction4=[!EnableMouseActionGroup * CpuFanGraph][!SetOptionGroup CpuFanGraph FontColor ""][!SetOptionGroup CpuFanGraph Fill ""][!UpdateMeterGroup CpuFanGraph]
+IfCondition5=#showDiskReadWrite# = 0
+IfTrueAction5=[!DisableMouseActionGroup * RWLetters][!SetOptionGroup RWLetters FontColor "#colorDisabled#"][!SetOptionGroup RWLetters Fill "Fill Color #colorDisabled#"][!UpdateMeterGroup RWLetters]
+IfFalseAction5=[!EnableMouseActionGroup * RWLetters][!SetOptionGroup RWLetters FontColor ""][!SetOptionGroup RWLetters Fill ""][!UpdateMeterGroup RWLetters]
 DynamicVariables=1
 Group=Settings
+
+; ------------------------------
+; ADMIN DETECTION for DISK
+
+[MeasureUserName]
+Measure=Plugin
+Plugin=SysInfo
+SysInfoType=USER_NAME
+IfCondition=1
+IfTrueAction=[!CommandMeasure MeasureGetLocalGroup "Run"]
+
+[MeasureGetLocalGroup]
+Measure=Plugin
+Plugin=RunCommand
+Parameter=net localgroup Administrators
+OutputType=ANSI
+FinishAction=[!EnableMeasure MeasureUserAdmin][!UpdateMeasure MeasureUserAdmin]
+
+[MeasureUserAdmin]
+Measure=String
+String=[MeasureGetLocalGroup]
+IfMatch=(?s).*\b[MeasureUserName:EscapeRegExp]\b.*
+IfMatchAction=[!SetVariable tempUserIsAdmin 1][!EnableMeasure MeasureUserAdminActions][!UpdateMeasure MeasureUserAdminActions]
+IfNotMatchAction=[!SetVariable tempUserIsAdmin 0][!EnableMeasure MeasureUserAdminActions][!UpdateMeasure MeasureUserAdminActions]
+DynamicVariables=1
+Disabled=1
+
+[MeasureUserAdminActions]
+Measure=Calc
+Formula=#userIsAdmin#
+IfCondition=(#userIsAdmin# = #tempUserIsAdmin#)
+IfFalseAction=[!SetVariable userIsAdmin #tempUserIsAdmin#][!WriteKeyValue Variables userIsAdmin #tempUserIsAdmin#]
+;[!UpdateMeasure MeasureDiskEjectButtons]
+DynamicVariables=1
+Disabled=1
+
+; [MeasureDiskEjectButtons]
+; Measure=Calc
+; Formula=#userIsAdmin#
+; IfCondition=MeasureDiskEjectButtons = 0
+; IfTrueAction=[!SetOptionGroup EjectButtons FontColor "#colorDisabled#"][!SetOptionGroup EjectButtons Fill "Fill Color #colorDisabled#"][!DisableMouseActionGroup * EjectButtons][!SetOptionGroup EjectButtons ToolTipText "This feature only works on administrator users. Sorry!"][!UpdateMeterGroup EjectButtons]
+; IfFalseAction=[!SetOptionGroup EjectButtons FontColor ""][!SetOptionGroup EjectButtons Fill ""][!EnableMouseActionGroup * EjectButtons][!SetOptionGroup EjectButtons ToolTipText ""][!UpdateMeterGroup EjectButtons]
+; DynamicVariables=1
+
 
 ; ==================================================
 ; METERS
@@ -395,16 +493,22 @@ X=(#bgWidth#/3+8)
 Y=70
 Shape=Rectangle 0,0,(#bgWidth#/3-14),256 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
-[HWinfoSettingsContainer]
+[DISKSettingsContainer]
 Meter=Shape
 X=(#bgWidth#*(2/3)+5)
 Y=70
-Shape=Rectangle 0,0,(#bgWidth#/3-14),105 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Shape=Rectangle 0,0,(#bgWidth#/3-14),160 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+
+[HWinfoSettingsContainer]
+Meter=Shape
+X=(#bgWidth#*(2/3)+5)
+Y=257
+Shape=Rectangle 0,0,(#bgWidth#/3-14),125 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [SpeedFanSettingsContainer]
 Meter=Shape
 X=(#bgWidth#*(2/3)+5)
-Y=205
+Y=414
 Shape=Rectangle 0,0,(#bgWidth#/3-14),80 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [MeterSkinTitle]
@@ -1856,14 +1960,181 @@ Meter=Image
 MeterStyle=StyleSettingsButtonMouseRegionGPU
 LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showPageAmount', '1', '0', 'PageAmountAction')"]
 
-[MeterBackgroundHeight]
-Meter=Image
-MeterStyle=StyleBackgroundHeight
-Y=20R
+; ==================================================
+;  DISK METERS
+
+[MeterTitle]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleStringSettingsSkinTitle
+Text=DISK SETTINGS
+X=(#bgWidth#*(5/6))
+Y=50
 
 ; ------------------------------
-; HWiNFO CONFIGURATION
+; GENERAL
+
+; Disk Title
+[MeterDiskTitleButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonDISK | StyleSettingsButton[&MeasureSettingsScriptDisk:GetAsset('check_icon', 'showDiskTitle', '1')]
+Group=Settings | HWiNFO
+
+[MeterDiskTitleButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleSettingsButtonLabel
+Text='Disk' Title
+Group=Settings | HWiNFO
+
+[MeterDiskTitleButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionDISK
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptDisk "Toggle('showDiskTitle', '1', '0', 'DISKTitleAction')"]
+Group=Settings | HWiNFO
+
+; Disk Temperatures
+[MeterDiskTempsButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonDISK | StyleSettingsButton[&MeasureSettingsScriptDisk:GetAsset('check_icon', 'showDiskTemps', '1')]
+Group=Settings | HWiNFO
+
+[MeterDiskTempsButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleSettingsButtonLabel
+Text=Disk Temperatures
+Group=Settings | HWiNFO
+
+[MeterDiskTempsButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionDISK
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptDisk "Toggle('showDiskTemps', '1', '0', 'DiskTempsAction')"]
+Group=Settings | HWiNFO
+
+; Disk Read/Write Speeds
+[MeterDiskReadWriteButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonDISK | StyleSettingsButton[&MeasureSettingsScriptDisk:GetAsset('check_icon', 'showDiskReadWrite', '1')]
+
+[MeterDiskReadWriteButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleSettingsButtonLabel
+Text=Disk Read/Write Speeds
+
+[MeterDiskReadWriteButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionDISK
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptDisk "Toggle('showDiskReadWrite', '1', '0', 'ShowReadWriteAction')"]
+
+; Disk Read/Write Letters
+[MeterDiskReadWriteLettersButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonDISK | StyleSettingsButton[&MeasureSettingsScriptDisk:GetAsset('check_icon', 'showDiskReadWriteLetters', '1')]
+X=[#CURRENTSECTION#:W]r
+Group=Settings | RWLetters
+
+[MeterDiskReadWriteLettersButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleSettingsButtonLabel
+Text=Disk Read/Write Letters
+Group=Settings | RWLetters
+
+[MeterDiskReadWriteLettersButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionDISK
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptDisk "Toggle('showDiskReadWriteLetters', '1', '0', 'RWLettersAction')"]
+Group=Settings | RWLetters
+
+[MeterDiskReadWriteLettersButtonHelpIcon]
+Meter=Shape
+MeterStyle=StyleShapeHelpIcon
+ToolTipTitle=Disk Read/Write Letters
+ToolTipText=If enabled, this will replace the read/write arrows with "R:" and "W:" respectively, making the display less ambiguous at the cost of not looking as cool. ;)
+
+; Ignore Removable Disks
+[MeterIgnoreRemovableButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonDISK | StyleSettingsButton[&MeasureSettingsScriptDisk:GetAsset('check_icon', 'ignoreRemovable', '1')]
+
+[MeterIgnoreRemovableButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleSettingsButtonLabel
+Text=Ignore Removable Disks
+
+[MeterIgnoreRemovableButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionDISK
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptDisk "Toggle('ignoreRemovable', '1', '0', 'IgnoreRemovableAction')"]
+
+[MeterIgnoreRemovableButtonHelpIcon]
+Meter=Shape
+MeterStyle=StyleShapeHelpIcon
+ToolTipTitle=Ignore Removable Disks
+ToolTipText=This option will cause Disks Meter to ignore any removable disks (USB drives, external hard drives, SD cards, etc.). This is useful if you do not want Disks Meter to constantly change its height when disks are connected / disconnected.
+
 ; ------------------------------
+; HIDE DISKS
+
+[MeterHideDisksLabel]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleStringSettingsLabel
+Text=Hide Disks:
+X=[MeterIgnoreRemovableButtonIcon:X]
+
+[MeterHideDisksBackground]
+Meter=Shape
+MeterStyle=StyleInputBoxBackgroundDisk
+X=3R
+
+[MeterHideDisksInputBox]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleInputBox
+Text=#manualHideDisks#
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptDisk "InputText({ meterName = '#CURRENTSECTION#', padding = { 0,0,0,1 } }, 'manualHideDisks', 'HideDisksAction')"]
+
+; [MeterHideDisksAdjustor]
+; Meter=Image
+; MeterStyle=StyleInputBoxAdjustor
+
+[MeterHideDisksHelpIcon]
+Meter=Shape
+MeterStyle=StyleShapeHelpIcon
+ToolTipTitle=Manually Hide Disks
+ToolTipText=Sometimes Disks Meter will show disks that you may not want to always see (network drives, virtual drives, etc.). In this case, add that disk's letter to the box below, with each letter separated by a space.
+Y=-3r
+; ------------------------------
+; HIDE ELEMENTS
+
+[MeterHideElementsLabel]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleStringSettingsLabel
+Text=Hide Disk Elements:
+X=[MeterIgnoreRemovableButtonIcon:X]
+
+
+[MeterHideElementsBackground]
+Meter=Shape
+MeterStyle=StyleInputBoxBackgroundDisk
+X=3R
+
+[MeterHideElementsInputBox]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleInputBox
+Text=#hideElements#
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptDisk "InputText({ meterName = '#CURRENTSECTION#', padding = { 0,0,0,1 } }, 'hideElements', 'HideElementsAction')"]
+
+; [MeterHideElementsAdjustor]
+; Meter=Image
+; MeterStyle=StyleInputBoxAdjustor
+
+[MeterHideElementsHelpIcon]
+Meter=Shape
+MeterStyle=StyleShapeHelpIcon
+ToolTipTitle=Hide Disk Element
+ToolTipText=Adding a disk's letter to this option will cause its temperature to be hidden. This is useful if you have a fixed drive which does not have a temperature sensor.
+Y=-3r
+
+; -----------------------------------------------------------------------------------------
+; ------------------------- HWiNFO CONFIGURATION ------------------------------------------
+; -----------------------------------------------------------------------------------------
 [MeasureHwinfoDetect]
 Measure=Plugin
 Plugin=HWiNFO
@@ -1877,13 +2148,27 @@ IfTrueAction=[!ShowMeterGroup NoHwinfo][!Redraw]
 IfCondition2=(MeasureHwinfoDetect <> -9000)
 IfTrueAction2=[!HideMeterGroup NoHwinfo][!Redraw]
 
+; [MeasureHwinfoDetect]
+; Measure=Plugin
+; Plugin=HWiNFO
+; HWiNFOSensorId=#HWiNFO-SMART-DiskATemp-SensorId#
+; HWiNFOSensorInstance=#HWiNFO-SMART-DiskATemp-SensorInstance#
+; HWiNFOEntryId=#HWiNFO-SMART-DiskATemp-EntryId#
+; HWiNFOType=SensorName
+; HWiNFOLogHandler=2
+; IfMatch=HWI_ERROR_NOT_CONNECTED
+; IfMatchAction=[!SetOptionGroup Hwinfo FontColor "#colorDisabled#"][!SetOptionGroup Hwinfo Fill "Fill Color #colorDisabled#"][!DisableMouseActionGroup * Hwinfo][!UpdateMeterGroup Hwinfo]
+; IfNotMatchAction=[!SetOptionGroup Hwinfo FontColor ""][!SetOptionGroup Hwinfo Fill ""][!EnableMouseActionGroup * Hwinfo][!UpdateMeterGroup Hwinfo]
+; OnChangeAction=[!UpdateMeasure MeasureHwinfoDetect]
+; DynamicVariables=1
+
 [MeterHwinfoConfigLabel]
 Meter=String
 ;MeterStyle=StyleStringSettingsHWinfo | StyleStringSettingsSectionLabel
 MeterStyle=StyleStringSettings | StyleStringSettingsSkinTitle
 Text=HWiNFO Configuration
 X=(#bgWidth#*(5/6))
-Y=50
+Y=35r
 
 [MeterHwinfoConfigTutorialIcon]
 Meter=Shape
@@ -1943,7 +2228,29 @@ LeftMouseUpAction=[!CommandMeasure MeasureOpenHwinfoSmvGPU "Run"]
 ; [MeterOpenSmvButtonMouseRegionGPU]
 ; Meter=Image
 ; MeterStyle=StyleSettingsButtonMouseRegion
-; LeftMouseUpAction=[!CommandMeasure MeasureOpenHwinfoSmv "Run"]
+; LeftMouseUpAction=[!CommandMeasure MeasureOpenHwinfoSmvGPU "Run"]
+
+;DISK
+[MeterOpenSmvButtonIconDISK]
+Meter=Shape
+MeterStyle=StyleIconButtonIcon | StyleShapeHwinfoLogo
+X=[MeterHwinfoConfigTutorialIcon:X]
+Y=6R
+
+[MeterOpenSmvButtonLabelDISK]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleIconButtonLabel
+Fontweight=600
+Fontsize=10
+Text=4. Edit HWiNFO DISK ID Settings
+MouseOverAction=[!SetOption MeterOpenSmvButtonLabelDISK FontColor #colorAccent#][!UpdateMeter MeterOpenSmvButtonLabelDISK][!Redraw]
+MouseLeaveAction=[!SetOption MeterOpenSmvButtonLabelDISK FontColor #colorMain#][!UpdateMeter MeterOpenSmvButtonLabelDISK][!Redraw]
+LeftMouseUpAction=[!CommandMeasure MeasureOpenHwinfoSmvDISK "Run"]
+
+; [MeterOpenSmvButtonMouseRegion]
+; Meter=Image
+; MeterStyle=StyleSettingsButtonMouseRegion
+; LeftMouseUpAction=[!CommandMeasure MeasureOpenHwinfoSmvDISK "Run"]
 
 [MeterHwinfoConfigRefreshIcon]
 Meter=Shape
@@ -1954,7 +2261,7 @@ Y=6R
 [MeterRefreshHiwinSettings]
 Meter=String
 MeterStyle=StyleStringSettingsHWinfo | StyleIconButtonLabel
-Text="4. Apply Settings"
+Text="5. Apply Settings"
 Fontweight=600
 Fontsize=10
 X=7R
@@ -1968,7 +2275,7 @@ LeftMouseUpAction=[!SetOption #CURRENTSECTION# Fill "Fill Color #colorAccent#"][
 Meter=String
 MeterStyle=StyleStringSettings | StyleStringSettingsSkinTitle
 X=(#bgWidth#*(5/6))
-Y=42r
+Y=40r
 Text=SpeedFan Configuration
 
 [MeterSpeedfanConfigTutorialIcon]
@@ -2036,6 +2343,10 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "InputText({ meterName 
 Meter=Image
 MeterStyle=StyleInputBoxAdjustor
 
+[MeterBackgroundHeight]
+Meter=Image
+MeterStyle=StyleBackgroundHeight
+Y=20R
 
 ; [MeterNoHwinfoBackground]
 ; Meter=Shape
@@ -2043,22 +2354,26 @@ MeterStyle=StyleInputBoxAdjustor
 ; Group=NoHwinfo
 ; Hidden=1
 
-[MeterNoHwinfoWarning]
+[MeterNoHwinfoWarning1]
 Meter=String
+SolidColor=36,36,38,255
 MeterStyle=StyleStringSettingsHWinfo | StyleStringCenterAlign
 FontColor=#colorError#
-X=(#bgWidth#*(5/6))
-Y=20r
+W=(#bgWidth#/3-14)
+X=(#bgWidth#*(5/6))-2
+Y=-220r
 Text=HWINFO NOT DETECTED
 Group=NoHwinfo
 Hidden=1
 
-[MeterNoHwinfoInfo]
+[MeterNoHwinfoInfo1]
 Meter=String
+SolidColor=36,36,38,255
 MeterStyle=StyleStringSettingsHWinfo | StyleStringParagraph
 Text=GPU Meter relies on HWiNFO to function. Please make sure you have configured HWiNFO as per the setup tutorial. Once HWiNFO is running properly, this gadget will automatically refresh.
-Group=NoHwinfo
-X=(#bgWidth#*(5/6)-110)
+W=(#bgWidth#/3-14)
+X=(#bgWidth#*(5/6)-123)
 W=230
+Group=NoHwinfo
 Hidden=1
 
