--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,11 @@ Skins/Everon/
 Skins/SONIQ/
 Skins/Weather.com/
 Skins/Windows10WeatherEnterpriseJSONnewTWC/
+Skins/Mond/
+Skins/Simple Clean/
+Skins/Windows10WeatherPRO/
+Skins/Rainy Days/
+Skins/Sonder/@Resources/Variables-MICHAEL-DESKTOP.inc
+Skins/Fountain of Colors/
+Skins/Back to the Basics/
+Skins/BigSur/
