--- a/Skins/Sonder/Date/1-Date_hori1.ini
+++ b/Skins/Sonder/Date/1-Date_hori1.ini
@@ -8,7 +8,7 @@ Group=AllNoWeather
 Name=Sonder 2 - Date
 Config=
 Information=Date Horizontal
-Version=2.4
+Version=2.4.1
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -20,7 +20,8 @@ Preview=
 [MeasureDate]
 Measure=Time
 Format=#DateFormat1#
-Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday2#","Tuesday":"#Tuesday2#","Wednesday":"#Wednesday2#","Thursday":"#Thursday2#","Friday":"#Friday2#","Saturday":"#Saturday2#","Sunday":"#Sunday2#"
+FormatLocale=Local
+;Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday2#","Tuesday":"#Tuesday2#","Wednesday":"#Wednesday2#","Thursday":"#Thursday2#","Friday":"#Friday2#","Saturday":"#Saturday2#","Sunday":"#Sunday2#"
 
 ;-------------------------------------METERS--------------------------------------------
 
@@ -34,7 +35,7 @@ H=(#DateScale#*45)
 
 [Date1]
 StringAlign=Center
-StringCase=None
+StringCase=#DateStringCase#
 StringStyle=Normal
 StringEffect=shadow
 FontEffectColor=#color2#
