--- a/Skins/Sonder/Date/1-Date_vert1.ini
+++ b/Skins/Sonder/Date/1-Date_vert1.ini
@@ -8,7 +8,7 @@ Group=AllNoWeather
 Name=Sonder 2 - Date
 Config=
 Information=Date Vertical
-Version=2.4
+Version=2.4.1
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -19,8 +19,9 @@ Preview=
 
 [MeasureDate]
 Measure=Time
-Format=#DateFormat2#
-Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday3#","Tuesday":"#Tuesday3#","Wednesday":"#Wednesday3#","Thursday":"#Thursday3#","Friday":"#Friday3#","Saturday":"#Saturday3#","Sunday":"#Sunday3#"
+Format=#DateFormatv2#
+FormatLocale=Local
+;Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday3#","Tuesday":"#Tuesday3#","Wednesday":"#Wednesday3#","Thursday":"#Thursday3#","Friday":"#Friday3#","Saturday":"#Saturday3#","Sunday":"#Sunday3#"
 
 ;-------------------------------------METERS--------------------------------------------
 
@@ -34,7 +35,7 @@ H=(#DateScale#*45)
 
 [Date1]
 StringAlign=Center
-StringCase=None
+StringCase=#DateStringCase#
 StringStyle=Normal
 StringEffect=shadow
 FontEffectColor=#color2#
