--- a/Skins/Sonder/Space/ISS.ini
+++ b/Skins/Sonder/Space/ISS.ini
@@ -12,7 +12,7 @@ Name=International Space Station Tracker
 Author=mpurses
 Information=International Space Station tracker, passover times, humans on ISS, and info on next launch event.
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
-Version=2.4
+Version=2.4.1
 
 [Variables]
 @include=#@#Variables.inc
@@ -20,6 +20,7 @@ Version=2.4
 ; --------------------------------------------------------------------------------------------
 ;                                       Measures
 ; --------------------------------------------------------------------------------------------
+
 [Lua]
 Measure=Script
 ScriptFile="#@#Scripts\ISS-TypeCast.lua"
@@ -35,7 +36,7 @@ RegExp=(?siU)(.*)$
 ;30 sec
 UpdateRate = 30
 
-; -------------------------- Get Latitude ---------------------------
+; -------------------------- Get Latitude of ISS ---------------------------
 [LatitudeHelper]
 Measure=WebParser
 URL=[MeasureSite]
@@ -47,8 +48,9 @@ Measure=WebParser
 URL=[LatitudeHelper]
 StringIndex=1
 ErrorString="0"
+Substitute="":"0"
 
-; -------------------------- Get Longitude ---------------------------
+; -------------------------- Get Longitude of ISS ---------------------------
 [LongitudeHelper]
 Measure=WebParser
 URL=[MeasureSite]
@@ -60,6 +62,7 @@ Measure=WebParser
 URL=[LongitudeHelper]
 StringIndex=1
 ErrorString="0"
+Substitute="":"0"
 
 ; -------------------------- Get Next Visual ---------------------------
 [MeasureNextVisual]
@@ -257,7 +260,8 @@ DynamicVariables=1
 Measure=WebParser
 URL=http://api.open-notify.org/astros.json
 RegExp=(?siU)(.*)$
-;;RegExp=(?siU)name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}
+;RegExp=(?siU)name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}
+;RegExp=(?siU)name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"}
 UpdateRate = 3600
 
 ;---------- Person 1 -----------
@@ -328,6 +332,7 @@ URL=[MeasurePersonSite]
 StringIndex=1
 RegExp=(?siU)name.*name.*name.*name.*name.*name": "(.*)"
 ErrorString=""
+Substitute="":""
 
 [MeasurePerson6]
 Measure=WebParser
