--- a/.gitignore
+++ b/.gitignore
@@ -393,3 +393,8 @@ Skins/Sonder/@Resources/Variables-MICHAEL-DESKTOP.inc
 Skins/Fountain of Colors/
 Skins/Back to the Basics/
 Skins/BigSur/
+Skins/bluetooth-plugin/
+Skins/ExamplesContainer/
+Skins/LuaTween - Example/
+Skins/Lumiero/
+Skins/Sundays/
