--- a/Skins/Sonder/Date/1-Date_vert1.ini
+++ b/Skins/Sonder/Date/1-Date_vert1.ini
@@ -8,7 +8,7 @@ Group=AllNoWeather
 Name=Sonder 2 - Date
 Config=
 Information=Date Vertical
-Version=2.4.1
+Version=2.4.2
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -20,7 +20,7 @@ Preview=
 [MeasureDate]
 Measure=Time
 Format=#DateFormatv2#
-FormatLocale=Local
+FormatLocale=#LanguageOverride#
 ;Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday3#","Tuesday":"#Tuesday3#","Wednesday":"#Wednesday3#","Thursday":"#Thursday3#","Friday":"#Friday3#","Saturday":"#Saturday3#","Sunday":"#Sunday3#"
 
 ;-------------------------------------METERS--------------------------------------------
