--- a/Skins/Sonder/Date/4-Date_Global.ini
+++ b/Skins/Sonder/Date/4-Date_Global.ini
@@ -12,7 +12,7 @@ Name=Global Date
 Author=mpurses
 Information=Simple Date. Global Format.
 License=Creative Commons Attribution 3.0
-Version=2.4.1
+Version=2.4.2
 
 [Variables]
 @include=#@#Variables.inc
@@ -20,12 +20,12 @@ Font=#LocalFontFace14#
 
 [MeasureDate]
 Measure=Time
-FormatLocale=Local
+FormatLocale=#LanguageOverride#
 Format=%d | %b | %G
 
 [MeasureDay]
 Measure=Time
-FormatLocale=Local
+FormatLocale=#LanguageOverride#
 Format=%A
 
 [Background]
