--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -8,7 +8,7 @@ Name=CPU Config
 Author=mpurses (raiguard mod)
 Information=Configuration for Advanced System
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
-Version=2.4.1
+Version=2.4.2
 
 [Variables]
 @includeStyleSheet=#@#Styles-System\Advanced-StyleSheet.inc
@@ -26,8 +26,8 @@ useMoboFanSensor=0
 currentGadget=#SystemMeterConfig#
 ;currentGadget=#gpuMeterConfig#
 ;currentGadget=#disksMeterConfig#
-extProgram=1
-coreTempSource=Hwinfo
+extProgram=2
+coreTempSource=CoreTemp
 ;GPU
 gpuMeter1Config=Sonder\System\GPU1
 gpuMeter2Config=Sonder\System\GPU2
