--- a/Skins/Sonder/Date/1-Date_hori1.ini
+++ b/Skins/Sonder/Date/1-Date_hori1.ini
@@ -8,7 +8,7 @@ Group=AllNoWeather
 Name=Sonder 2 - Date
 Config=
 Information=Date Horizontal
-Version=2.4.1
+Version=2.4.2
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -20,7 +20,7 @@ Preview=
 [MeasureDate]
 Measure=Time
 Format=#DateFormat1#
-FormatLocale=Local
+FormatLocale=#LanguageOverride#
 ;Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday2#","Tuesday":"#Tuesday2#","Wednesday":"#Wednesday2#","Thursday":"#Thursday2#","Friday":"#Friday2#","Saturday":"#Saturday2#","Sunday":"#Sunday2#"
 
 ;-------------------------------------METERS--------------------------------------------
