--- a/Skins/Sonder/Network/Network-Graph-Only.ini
+++ b/Skins/Sonder/Network/Network-Graph-Only.ini
@@ -5,6 +5,7 @@
 [Rainmeter]
 Author=mpurses (Enigma-Kaelri mod)
 Group=AllNoWeather
+AccurateText=1
 
 [Variables]
 @include=#@#Variables.inc
@@ -26,5 +27,5 @@ Variant=Graph
 [Metadata]
 Name=Sonder 2 - Network (Graph Only)
 Information=Shows your network activity. Click the graph to open Resource Monitor.
-Version=2.4.1
+Version=2.4.2
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
