--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,6 @@ Skins/ExamplesContainer/
 Skins/LuaTween - Example/
 Skins/Lumiero/
 Skins/Sundays/
+Skins/Evasion/
+Skins/Webpages/
+Skins/Snow/
