--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,13 @@ Skins/Sundays/
 Skins/Evasion/
 Skins/Webpages/
 Skins/Snow/
+Skins/Harmony/
+Skins/La Compagnie des Ombres - Clock/
+Skins/Lisna/
+Skins/Noso/
+Skins/Spacial/
+Skins/Thomo/
+Skins/Formal/
+Skins/MouseVolume/
+Skins/_Simple Clean/
+Skins/_Snow/
