--- a/Skins/Sonder/Date/5-Date_Weekday+Time.ini
+++ b/Skins/Sonder/Date/5-Date_Weekday+Time.ini
@@ -15,7 +15,7 @@ Name=Weekday, Date, and Time
 Author=mpurses (HipHopium mod)
 Information=Weekday, Date and Time
 License=Creative Commons Attribution 3.0
-Version=2.4.4
+Version=2.4.5
 
 [Variables]
 @include=#@#Variables.inc
@@ -54,10 +54,11 @@ FontEffectColor=#color2#
 FontFace=Raleway ExtraLight
 FontColor=#Color1#
 FontSize=(40*#Scale#)
-W=(480*#Scale#)
-X=(240*#Scale#)
+W=(550*#Scale#)
+X=(275*#Scale#)
 Y=(0*#Scale#)
 Text="%1"
+ClipString=0
 InlineSetting=CharacterSpacing | (10*#Scale#) | (10*#Scale#)
 AntiAlias=1
 DynamicVariables=1
