--- a/Skins/Sonder/EverydayHabitCalendar/EverydayHabitCalendar.ini
+++ b/Skins/Sonder/EverydayHabitCalendar/EverydayHabitCalendar.ini
@@ -9,7 +9,7 @@ AccurateText=1
 Name=Sonder 2 - Everyday Habit Calendar
 Config=
 Information=Keep track of your daily goals and don't break the chain!
-Version=2.4.4
+Version=2.4.5
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -25,7 +25,7 @@ Preview=
 ;==============================================================================================================================================================================
 
 [Variables]
-@include=#@#Fonts.inc
+;@include=#@#Fonts.inc
 @include2=#@#Variables.inc
 @include3=#@#Calendar-Day-Variables.inc
 @include4=#@#Calendar\Calendar-Measures.inc
