--- a/Skins/Sonder/Recycle/Bin_1.ini
+++ b/Skins/Sonder/Recycle/Bin_1.ini
@@ -5,12 +5,12 @@ MouseLeaveAction=[!RainmeterHideMeter BinCalc][!RainmeterRedraw]
 BackgroundMode=3
 BackgroundMargins=0,0,0,0
 Group=AllNoWeather
-@include=#@#Fonts.inc
+;@include=#@#Fonts.inc
 
 [Metadata]
 Name=Sonder 2 - Recycle Bin
 Information=Counts the items in your Recycle bin.  Hover over meter to reveal total disk space used.
-Version=2.4.4
+Version=2.4.5
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [Variables]
