--- a/Skins/Sonder/Settings/Language-Override.ini
+++ b/Skins/Sonder/Settings/Language-Override.ini
@@ -5,7 +5,7 @@ Update=-1
 Name= Sonder 2 - Laanguage Override
 Author=mpurses
 Information=Language Override Settings
-Version=2.4.4
+Version=2.4.5
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 
@@ -301,7 +301,8 @@ LeftMouseUpAction=[!WriteKeyValue Variables #VariableToWrite4# "pt-BR" "#@#Varia
 
 
 ;======================================================================
-[L17]
+
+[L17.1]
 Meter=String
 StringAlign=left
 FontFace=#LocalFontFace8#
@@ -310,6 +311,22 @@ FontSize=11
 StringStyle=normal
 X=160
 Y=55
+Text=Indonesian
+AntiAlias=1
+MouseOverAction=[!SetOption L17.1 FontSize 13][!UpdateMeter L17.1][!Redraw]
+MouseLeaveAction=[!SetOption L17.1 FontSize 11][!UpdateMeter L17.1][!Redraw]
+LeftMouseUpAction=[!WriteKeyValue Variables #VariableToWrite4# "id-ID" "#@#Variables.inc"][!Refresh "#ROOTCONFIG#"][!Refresh "#ROOTCONFIG#\Settings"][!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"][!RefreshApp]
+
+
+[L17]
+Meter=String
+StringAlign=left
+FontFace=#LocalFontFace8#
+FontColor=#FontColor3#
+FontSize=11
+StringStyle=normal
+X=160
+Y=25r
 Text=Romanian
 AntiAlias=1
 MouseOverAction=[!SetOption L17 FontSize 13][!UpdateMeter L17][!Redraw]
