--- a/Skins/Sonder/Time/Time_hori1.ini
+++ b/Skins/Sonder/Time/Time_hori1.ini
@@ -8,13 +8,13 @@ MouseScrollUpAction=[!WriteKeyValue Variables TimeScale "(#TimeScale#+#ScrollMou
 MouseScrollDownAction=[!WriteKeyValue Variables TimeScale "(#TimeScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #TimeScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh]
 ;[!SetVariable TimeScale "(#TimeScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #TimeScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"]
 Group=AllNoWeather
-@include=#@#Fonts.inc
+;@include=#@#Fonts.inc
 
 [Metadata]
 Name=Sonder 2 - Time (horizontal)
 Config=
 Information=This Time can be set to either 12-hours or 24-hours, | use the Confinguration tool for this and more options.
-Version=2.4.4
+Version=2.4.5
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -23,10 +23,12 @@ Preview=
 [MeasureTime]
 Measure=Time
 Format="#Hours#"
+;Format="09"
 
 [MeasureTime2]
 Measure=Time
 Format="%M"
+;Format="34"
 
 [Variables]
 @include=#@#Variables.inc
@@ -67,8 +69,8 @@ StringStyle=Normal
 StringEffect=None
 FontEffectColor=#color2#
 FontColor=#color1#
-FontFace=#LocalFontFace#
-FontSize=(#TimeScale#*150)
+FontFace=#TimeFont#
+FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
@@ -79,8 +81,8 @@ StringStyle=Normal
 StringEffect=None
 FontEffectColor=#color2#
 FontColor=#color3#
-FontFace=#LocalFontFace#
-FontSize=(#TimeScale#*150)
+FontFace=#TimeFont#
+FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
@@ -88,23 +90,23 @@ ClipString=0
 StringAlign=Center
 StringStyle=Normal
 FontColor=#color2#
-FontFace=#LocalFontFace#
-FontSize=(#TimeScale#*150)
+FontFace=#TimeFont#
+FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
-[Times1hadow]
+[Time1shadow]
 Meter=STRING
 MeasureName=MeasureTime
 MeterStyle=timeshadow
 X=(#TimeScale#*114)
-Y=(#TimeScale#*-22)
+Y=(#TimeScale#*(-22+#TimeYAdj#))
 
 [Time2shadow]
 Meter=STRING
 MeasureName=MeasureTime2
 MeterStyle=timeshadow
-X=(#TimeScale#*225)r
+X=(#TimeScale#*(225+#TimeHMSpacing#))r
 Y=r
 
 [Time1]
@@ -120,5 +122,5 @@ Meter=STRING
 StringEffect=Shadow
 MeasureName=MeasureTime2
 MeterStyle=time2style
-X=(#TimeScale#*225)r
+X=(#TimeScale#*(225+#TimeHMSpacing#))r
 Y=r
