--- a/Skins/Sonder/Time/Time_vert1.ini
+++ b/Skins/Sonder/Time/Time_vert1.ini
@@ -4,13 +4,13 @@ MouseOverAction=[!RainmeterShowMeter colors][!RainmeterRedraw]
 MouseLeaveAction=[!RainmeterHideMeter colors][!RainmeterRedraw]
 MiddleMouseDownAction=!RainmeterActivateConfig #CURRENTCONFIG# Time_hori1.ini
 Group=AllNoWeather
-@include=#@#Fonts.inc
+;@include=#@#Fonts.inc
 
 [Metadata]
 Name=Sonder 2 - Time (vertical)
 Config=
 Information=This Time can be set to either 12-hours or 24-hours, | use the Confinguration tool for this and more options.
-Version=2.4.4
+Version=2.4.5
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -62,8 +62,8 @@ StringStyle=Normal
 StringEffect=None
 FontEffectColor=#color2#
 FontColor=#color1#
-FontFace=#LocalFontFace#
-FontSize=(#TimeScale#*150)
+FontFace=#TimeFont#
+FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
@@ -74,8 +74,8 @@ StringStyle=Normal
 StringEffect=None
 FontEffectColor=#color2#
 FontColor=#color3#
-FontFace=#LocalFontFace#
-FontSize=(#TimeScale#*150)
+FontFace=#TimeFont#
+FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
@@ -83,8 +83,8 @@ ClipString=0
 StringAlign=Center
 StringStyle=Normal
 FontColor=#color2#
-FontFace=#LocalFontFace#
-FontSize=(#TimeScale#*150)
+FontFace=#TimeFont#
+FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
@@ -93,7 +93,7 @@ Meter=STRING
 MeasureName=MeasureTime
 MeterStyle=timeshadow
 X=(#TimeScale#*126)
-Y=(#TimeScale#*-20)
+Y=(#TimeScale#*(-20+#TimeYAdj#))
 
 [Time1]
 Meter=STRING
@@ -107,7 +107,7 @@ Meter=STRING
 MeasureName=MeasureTime2
 MeterStyle=timeshadow
 X=(#TimeScale#*126)
-Y=(#TimeScale#*154)
+Y=(#TimeScale#*(154+#TimeYAdj#))
 
 [Time2]
 Meter=STRING
