--- a/Skins/Sonder/Date/1-Date_hori1.ini
+++ b/Skins/Sonder/Date/1-Date_hori1.ini
@@ -1,14 +1,16 @@
 [Rainmeter]
 Author=mpurses (Elegance Mod)
-MiddleMouseDownAction=!RainmeterActivateConfig #CURRENTCONFIG# Date_vert1.ini
+MiddleMouseDownAction=!RainmeterActivateConfig #CURRENTCONFIG# 1-Date_vert1.ini
+MouseScrollUpAction=[!WriteKeyValue Variables DateScale "(#DateScale#+#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh] 
+MouseScrollDownAction=[!WriteKeyValue Variables DateScale "(#DateScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #DateScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh]
 Group=AllNoWeather
-@include=#@#Fonts.inc
+;@include=#@#Fonts.inc
 
 [Metadata]
 Name=Sonder 2 - Date
 Config=
 Information=Date Horizontal
-Version=2.4.4
+Version=2.4.5
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -40,7 +42,7 @@ StringStyle=Normal
 StringEffect=shadow
 FontEffectColor=#color2#
 FontColor=#DateColor1#
-FontFace=#LocalFontFace#
+FontFace=#DateFont#
 FontSize=(#DateScale#*25)
 AntiAlias=1
 ClipString=0
@@ -51,4 +53,5 @@ MeasureName=MeasureDate
 MeterStyle=Date1
 X=(#DateScale#*225)
 Y=0
+
 
