--- a/Skins/Sonder/Settings/Weather-Language.ini
+++ b/Skins/Sonder/Settings/Weather-Language.ini
@@ -5,7 +5,7 @@ Update=-1
 Name= Sonder 2 - Weather
 Author=mpurses (Astroweather mod)
 Information=Weather Language Settings
-Version=2.4.4
+Version=2.4.5
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 
@@ -306,11 +306,13 @@ Text=Portuguese
 AntiAlias=1
 MouseOverAction=[!SetOption L16 FontSize 13][!UpdateMeter L16][!Redraw]
 MouseLeaveAction=[!SetOption L16 FontSize 11][!UpdateMeter L16][!Redraw]
-LeftMouseUpAction=[!WriteKeyValue Variables #VariableToWrite3# "Portuguese" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite4# "pt-PT" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite5# "" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite6# "Kmh" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite7# "Mb" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite8# "Km" "#@#Variables.inc"][!Refresh "#ROOTCONFIG#"][!Refresh "#ROOTCONFIG#\Settings"][!ActivateConfig "#ROOTCONFIG#\Settings" "Weather-Settings.ini"][!RefreshApp]
+LeftMouseUpAction=[!WriteKeyValue Variables #VariableToWrite3# "Portuguese" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite4# "pt-BR" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite5# "" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite6# "Kmh" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite7# "Mb" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite8# "Km" "#@#Variables.inc"][!Refresh "#ROOTCONFIG#"][!Refresh "#ROOTCONFIG#\Settings"][!ActivateConfig "#ROOTCONFIG#\Settings" "Weather-Settings.ini"][!RefreshApp]
 
 
 ;======================================================================
-[L17]
+
+
+[L17.1]
 Meter=String
 StringAlign=left
 FontFace=#LocalFontFace8#
@@ -319,6 +321,21 @@ FontSize=11
 StringStyle=normal
 X=160
 Y=55
+Text=Indonesian
+AntiAlias=1
+MouseOverAction=[!SetOption L17.1 FontSize 13][!UpdateMeter L17.1][!Redraw]
+MouseLeaveAction=[!SetOption L17.1 FontSize 11][!UpdateMeter L17.1][!Redraw]
+LeftMouseUpAction=[!WriteKeyValue Variables #VariableToWrite3# "Indonesian" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite4# "id-ID" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite5# "" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite6# "Kmh" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite7# "Mb" "#@#Variables.inc"][!WriteKeyValue Variables #VariableToWrite8# "Km" "#@#Variables.inc"][!Refresh "#ROOTCONFIG#"][!Refresh "#ROOTCONFIG#\Settings"][!ActivateConfig "#ROOTCONFIG#\Settings" "Weather-Settings.ini"][!RefreshApp]
+
+[L17]
+Meter=String
+StringAlign=left
+FontFace=#LocalFontFace8#
+FontColor=#FontColor3#
+FontSize=11
+StringStyle=normal
+X=160
+Y=25r
 Text=Romanian
 AntiAlias=1
 MouseOverAction=[!SetOption L17 FontSize 13][!UpdateMeter L17][!Redraw]
